--- a/style.css
+++ b/style.css
@@ -5,11 +5,17 @@
 	outline:none;
 	overflow:hidden;
 }
-.center {
-	margin: auto;
-	text-align: center;
-}
 html,body {
 	width:100%;
 	height:100%;
+}
+canvas {
+	margin: auto;
+	text-align: center;
+	width:100%;
+	height:80%;
+}
+div.bottom{
+	width:100%;
+	height:20%;
 }
