--- a/style.css
+++ b/style.css
@@ -13,3 +13,10 @@ div.bottom{
 	width:100%;
 	height:20%;
 }
+div#message{
+	position:absolute;
+	top:-10%;
+	left:-10%;
+	width:10%;
+	height:10%;
+}
