--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-*{
+* {
 	margin:0;
 	padding:0;
 	border:none;
@@ -9,14 +9,10 @@ html,body {
 	width:100%;
 	height:100%;
 }
-div.bottom{
+div.bottom {
 	width:100%;
 	height:20%;
 }
-div#message{
-	position:absolute;
-	top:-10%;
-	left:-10%;
-	width:10%;
-	height:10%;
+#info-panel {
+	margin: auto;
 }
