--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ html,body {
 	height:100%;
 }
 #info-panel {
+	background:#f00;
 	position:absolute;
 	left:0;
 	top:0;
@@ -16,6 +17,7 @@ html,body {
 	height:50%;
 }
 #control-panel{
+	background:#f00;
 	position:absolute;
 	left:0;
 	top:50%;
