--- a/style.css
+++ b/style.css
@@ -5,24 +5,20 @@
 	outline:none;
 }
 html,body {
-	background: rgb(200, 200, 200);
 	width:100%;
 	height:100%;
 }
 #info-panel {
 	position: absolute;
-	left: 0;
-	top: 0;
-	width: 20%;
+	left: 0%;
+	top: 0%;
+	width: 10%;
 	height: 50%;
 }
 #control-panel {
 	position: absolute;
-	left: 0;
+	left: 0%;
 	top: 50%;
-	width: 20%;
+	width: 10%;
 	height: 50%;
-}
-#canvas {
-	margin: auto;
 }
