--- a/style.css
+++ b/style.css
@@ -3,22 +3,16 @@
 	padding:0;
 	border:none;
 	outline:none;
+	overflow:hidden;
 }
 html,body {
 	width:100%;
 	height:100%;
 }
-#info-panel {
-	position: absolute;
-	left: 0%;
-	top: 0%;
-	width: 10%;
-	height: 50%;
+div.bottom {
+	width:100%;
+	height:20%;
 }
-#control-panel {
-	position: absolute;
-	left: 0%;
-	top: 50%;
-	width: 10%;
-	height: 50%;
+#info-panel {
+	margin: auto;
 }
