--- a/style.css
+++ b/style.css
@@ -1,33 +1,34 @@
 * {
-	margin:0;
-	padding:0;
-	border:none;
-	outline:none;
-	overflow:hidden;
+	margin: 0;
+	padding: 0;
+	border: none;
+	outline: none;
+	overflow: hidden;
 }
 html,body {
-	width:100%;
-	height:100%;
+	width: 100%;
+	height: 100%;
 }
 div.bottom {
-	width:100%;
-	height:20%;
+	width: 100%;
+	height: 20%;
+}
+#panel {
+	margin-left: 50%;
+}
+#panel-select {
+	margin: 0.2%;
+	padding: 0.1%;
 }
 #info-panel {
 	border:solid 2px #1a1a1c;
-	position: absolute;
 	background: rgb(200, 200, 200);
 	width: auto;
-	top: 0%;
-	left: 0%;
 	user-select: none;
 }
 #control-panel {
-	border:solid 2px #1a1a1c;
-	position: absolute;
+	border: solid 2px #1a1a1c;
 	background: rgb(200, 200, 200);
 	width: auto;
-	top: 50%;
-	left: 0%;
 	user-select: none;
 }
