--- a/style.css
+++ b/style.css
@@ -20,14 +20,16 @@ div.bottom {
 	padding: 0.1%;
 }
 #info-panel {
-	border:solid 2px #1a1a1c;
-	display: inline-block;
+	border: solid 2px #1a1a1c;
 	background: rgb(200, 200, 200);
+	display: inline-block;
+	position: absolute;
 	user-select: none;display: inline-block;
 }
 #control-panel {
 	border: solid 2px #1a1a1c;
-	display: inline-block;
 	background: rgb(200, 200, 200);
+	display: inline-block;
+	position: absolute;
 	user-select: none;
 }
