--- a/style.css
+++ b/style.css
@@ -8,10 +8,6 @@ html,body {
 	width: 100%;
 	height: 100%;
 }
-div.bottom {
-	width: 100%;
-	height: 20%;
-}
 #panel {
 	margin-left: 50%;
 }
@@ -23,7 +19,7 @@ div.bottom {
 	border: solid 2px #1a1a1c;
 	background: rgb(200, 200, 200);
 	display: inline-block;
-	user-select: none;display: inline-block;
+	user-select: none;
 }
 #control-panel {
 	border: solid 2px #1a1a1c;
