--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ html,body {
 #info-panel {
 	position: absolute;
 	border: solid 2px #1a1a1c;
+	padding: 0.1%;
 	background: rgb(200, 200, 200);
 	display: inline-block;
 	user-select: none;
@@ -25,6 +26,7 @@ html,body {
 #control-panel {
 	position: absolute;
 	border: solid 2px #1a1a1c;
+	padding: 0.1%;
 	background: rgb(200, 200, 200);
 	display: inline-block;
 	user-select: none;
