--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ html,body {
 	display: inline-block;
 	user-select: none;
 }
-#graph {
+#graph-canvas {
 	border: solid 2px #1a1a1c;
 	user-select: none;
 }
